--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
   pull_request:
+    branches: main
 
 jobs:
   stable-check:
@@ -25,10 +26,11 @@ jobs:
       - name: moon version
         run: |
           moon version --all
-          moonrun --version
 
       - name: moon check
-        run: moon check --deny-warn
+        run: |
+          moon update
+          moon check
 
       - name: moon info
         run: |
@@ -67,7 +69,9 @@ jobs:
           moonrun --version
 
       - name: moon check
-        run: moon check --deny-warn
+        run: |
+          moon update
+          moon check
 
       - name: moon test
         run: |
