--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
   pull_request:
+    branches: main
 
 jobs:
   stable-check:
@@ -25,19 +26,16 @@ jobs:
       - name: moon version
         run: |
           moon version --all
-          moonrun --version
+
+      - name: moon update
+        run: moon update
 
       - name: moon check
-        run: moon check --deny-warn
-
-      - name: moon info
-        run: |
-          moon info --target wasm,wasm-gc,js,native
-          git diff --exit-code
+        run: moon check
 
       - name: format diff
         run: |
-          moon fmt --block-style
+          moon fmt
           git diff --exit-code
 
       - name: moon test
@@ -66,8 +64,11 @@ jobs:
           moon version --all
           moonrun --version
 
+      - name: moon update
+        run: moon update
+
       - name: moon check
-        run: moon check --deny-warn
+        run: moon check
 
       - name: moon test
         run: |
@@ -76,12 +77,7 @@ jobs:
           moon test --target native
           moon test --target native --release
 
-      - name: moon info
-        run: |
-          moon info --target wasm,wasm-gc,js,native
-          git diff
-
       - name: format diff
         run: |
           moon fmt
-          git diff
+          git diff --exit-code
